<resources>
    <string name="app_name">Imoney</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newExpenseType">新建消费类型</string>
    <string name="gotoLogin">已经有账户了，去登陆</string>
    <string name="createAccount">创建账户</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="name">姓名</string>
    <string name="login">登陆</string>
    <string name="gotoCreateAccount">没有账户？去创建一个</string>
    <string name="home">主页</string>
    <string name="viewByChart">统计数据</string>
    <string name="viewByType">分类查看</string>
    <string name="viewBudget">预算</string>
    <string name="application">应用</string>
    <string name="share">分享</string>
    <string name="loginOut">注销登陆</string>
    <string name="about">关于</string>
    <string name="monthBudget">本月预算</string>
    <string name="monthSpend">本月消费</string>
    <string name="yearSpend">本年消费</string>
    <string name="weekSpend">本周消费</string>
    <string name="daySpend">本日消费</string>
    <string name="setMonthBudget">制定本月预算</string>
    <string name="oldPassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="RnewPassword">再次输入新密码</string>
    <string name="beSureChange">确认修改</string>
    <string name="remeberPassword">请牢记新密码</string>
    <string name="generateChart">生成图表</string>
    <string name="newExpense">新消费</string>
    <string name="description">描述</string>
    <string name="amount">金额</string>
    <string name="location">地点</string>
    <string name="OK">确认</string>
    <string name="changePassword">改密码</string>
    <string name="expenseType">消费类型</string>
    <string name="inputNewExpenseType">输入新建的类型名称</string>
    <string name="new_expense_type">新建消费类型</string>
    <string name="expense_list">消费列表</string>
    <string name="illegal_input">输入不合法</string>
</resources>
