<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/chart_24"
            android:title="@string/viewByChart" />
        <item
            android:id="@+id/nav_classify"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/viewByType" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/budget_24"
            android:title="@string/viewBudget" />

    </group>

    <item android:title="@string/application">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_loginOut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/loginOut" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
